kubernetes/applications/stunnel/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stunnel
  namespace: apps
spec:
  selector:
    matchLabels:
      app: stunnel
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: stunnel
    spec:
      containers:
        - name: stunnel
          image: alpine:latest
          command: ["/bin/sh", "-c"]
          args:
          - |
            apk add --no-cache stunnel
            stunnel /etc/stunnel/stunnel.conf
          ports:
            - containerPort: 443
              name: stunnel
              protocol: TCP
          volumeMounts:
            - name: stunnel-config
              mountPath: /etc/stunnel/stunnel.conf
              subPath: stunnel.conf
            - name: certs
              mountPath: /etc/stunnel/certs
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: stunnel-config
          emptyDir: {}
        - name: certs
          secret:
            secretName: wg-ildoc-it-tls
